# bio-relationship-extraction

./: .gitignore  LICENSE  README.md  bge-small-env1.5.py  docker-compose.yml  dockerfile  main.py  makefile  pyproject.toml  test.py  test_transformer.py
app/: pyproject.toml
pubMedExtractor/: pubmed-downloader.py
src/backend/: Thesis Development.postman_collection.json  config.py  elasticSearch.py  main.py  pyproject.toml  state.py  test1.py  test2.py  test3.py  test_script.py
src/backend/helpers/: main.py  selection_relationships.py
src/backend/models/: question.py  structured_response.py
src/backend/pubMedExtractor/: pubmed-downloader.py
src/backend/routes/: __init__.py  add_documents.py  health_check.py  initialise_datastore.py  pubmed_search.py  send_question.py
src/backend/services/: add_document_service.py  initalise_vector_store.py  llm.py  query_documents.py
src/frontend/: README.md  __init__.py  app.py  config.py  confirm_relationships.py  knowledger_graph.py  main.py  models.py  paper_search.py  pyproject.toml  relationship_details.py  run.py  temp_network.html  views.py
src/frontend/alternative/: config.py  confirm_relationships.py  knowledger_graph.py  main.py  paper_search.py
src/frontend/alternative/helper/: api.py  helpers.py  neo4j_connector.py
src/frontend/helper/: __init__.py  api.py  helpers.py  neo4j_connector.py
src/frontend/utils/: __init__.py  api_connector.py  db_connector.py
