[project]
name = "bio-relationship-extraction"
version = "0.1.0"
description = ""
authors = [
    {name = "Jayden Lee",email = "jayden@proanalytica.com.au"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "llama-index (>=0.12.22,<0.13.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "llama-index-vector-stores-postgres (>=0.4.2,<0.5.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "accelerate (>=1.4.0,<2.0.0)",
    "nvidia-cuda-runtime-cu12 (>=12.8,<13.0)",
    "torch (>=2.7.0.dev20250305,<3.0.0)",
    "llama-index-embeddings-huggingface (>=0.5.2,<0.6.0)",
    "llama-index-embeddings-instructor (>=0.3.0,<0.4.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-nightly"}
