[project]
name = "bio-relationship-extraction"
version = "0.1.0"
description = ""
authors = [
    {name = "Jayden.Lee@student.uts.edu.au"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "llama-index (>=0.12.26,<0.13.0)",
    "llama-index-core (>=0.12.27,<0.13.0)",
    "llama-index-readers-file (>=0.4.7,<0.5.0)",
    "llama-index-llms-ollama (>=0.5.4,<0.6.0)",
    "llama-index-vector-stores-postgres (>=0.4.2,<0.5.0)",
    "llama-index-embeddings-ollama (>=0.6.0,<0.7.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
    "llama-index-vector-stores-elasticsearch (>=0.4.3,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
