[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jayden Lee",email = "jayden@proanalytica.com.au"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "streamlit (>=1.45.0,<2.0.0)",
    "neo4j (>=5.28.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
